# tsuku

./: .gitignore  .gitmodules  .golangci.yaml  .goreleaser.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.integration  IMPLEMENTATION_PLAN.md  LICENSE  MANUAL_TESTING_GUIDE.md  Makefile  README.md  batch-control.json  cleanup-analysis-full.txt  cleanup-analysis.txt  codecov.yml  container-images.json  coverage.html  embedded-validation-exclusions.json  go.mod  go.sum  install.sh  integration_test.go  lint_test.go  renovate.json  test-matrix.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  ci-batch-config.json  dependabot.yml
.release/: post-release.sh  set-version.sh
_site/: recipes.json
blog/: hugo.toml
bundled/: bundled.go
cmd/tsuku-dltest/: Cargo.toml
cmd/tsuku-dltest/src/: main.rs
data/: README.md  dep-mapping.json  priority-queue.json
docs/: BUILD-ESSENTIALS.md  DESIGN-build-dependencies.md  DESIGN-build-essentials.md  DESIGN-cask-support.md  DESIGN-centralize-validation.md  DESIGN-checksum-pinning.md  DESIGN-container-validation-slice-2.md  DESIGN-decomposable-actions.md  DESIGN-dependency-pattern.md  DESIGN-dependency-provisioning.md  DESIGN-dependency-version-refs.md  DESIGN-deterministic-execution.md  DESIGN-deterministic-resolution.md  DESIGN-fossil-archive.md  DESIGN-fossil-version-source.md  DESIGN-go-ecosystem.md  DESIGN-go-install-inference.md  DESIGN-golden-family-support.md  DESIGN-golden-plan-testing.md  DESIGN-hardcoded-version-detection.md  DESIGN-homebrew-builder.md  DESIGN-homebrew-cleanup.md  DESIGN-info-enhancements.md  DESIGN-install-binaries-semantics.md  DESIGN-install-sandbox.md  DESIGN-installation-plans-eval.md  DESIGN-llm-builder-infrastructure.md  DESIGN-llm-productionize.md  DESIGN-llm-slice-1-spike.md  DESIGN-llm-slice-3-repair-loop.md  (+42 more)
tsuku-llm/: Cargo.toml  build.rs
tsuku-llm/src/: hardware.rs  main.rs  model.rs  models.rs
tsuku-llm/src/llama/: context.rs  error.rs  grammar.rs  mod.rs  model.rs  params.rs  sampler.rs
(+18900 files in other folders)
