[package]
name = "tsuku-dltest"
version = "0.0.0"
edition = "2021"
description = "dlopen verification helper for tsuku"
license = "MIT"
repository = "https://github.com/tsukumogami/tsuku"

[[bin]]
name = "tsuku-dltest"
path = "src/main.rs"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = "z"
